[package]
name = "rusty_kernel"
version = "0.1.0"
edition = "2021"

[lib]
name = "rusty_kernel"
crate-type = ["cdylib"]

# [[bin]]
# name = "rusty_kernel"
# path = "src/main.rs"

[dependencies]
rand = "0.8.4"
rustc-hash = "1.1"
ndarray = "0.15.4"
numpy = "0.17.0"
pyo3 = { version = "0.17.0", features = ["extension-module"] }
# libc = "0.2.110"
rust-optimal-transport = "0.2"

[profile.release]
opt-level = 3
debug = true
lto = "thin"
